<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            style="@style/main"/>


    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_explanation"
        style="@style/text_paragraph"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/instruments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instrument"
            style="@style/instruments"/>

        <Button
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            style="@style/history"/>

        <Button
            android:id="@+id/levels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            style="@style/levels"/>

        <Button
            android:id="@+id/playing_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playing_now"
            style="@style/playing"/>


    </LinearLayout>

</LinearLayout>
